k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cllone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: henriquefurtado47/cllone-backend:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/schema/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
